Update source